# cheh_maienmaien

./: .gitignore  CHANGELOG.md  DEPLOIEMENT.md  DEPLOY.md  DEPLOYMENT.md  FIX_DATABASE_INIT.md  GUIDE_DEPLOIEMENT_LOCAL.md  GUIDE_POSTGRESQL_RENDER.md  IDENTIFIANTS_ADMIN.md  LOCAL_DEV_FIX.md  MIGRATION_status_reservations.md  Procfile  README.md  README_CLOUDINARY.md  README_hcaptcha.md  SECURITE_ADMIN.md  SECURITE_IMAGES.md  TEST_RESULTS.md  app.py  app_simple.py  calculate_distances.py  cloudinary_storage.py  create_admin.py  create_admin_render.py  distances_results.json  env.example.txt  force_update_admin.py  gunicorn_config.py  improve_captions.py  migrate_add_status.py  migrate_db.py  migrate_images_to_db.py  migrate_password_hash.py  pyproject.toml  reload_photos.py  render.yaml  requirements.txt  script.js  seed_data.py  style.css  (+3 more)
static/: robots.txt
static/css/: simple.css  style.css
static/js/: activities.js  admin.js  apartment.js  calendar.js  main.js  reservation.js  simple-calendar.js
templates/: activites.html  admin.html  admin_add.html  admin_dashboard.html  admin_leaderboard.html  admin_login.html  admin_pending.html  admin_photos.html  admin_wall_of_shame.html  appartement.html  base.html  calendrier.html  index.html  leaderboard.html  login.html  reserver.html  wall_of_shame.html
