[tool.poetry]
name = "cheh-maienmaien"
version = "0.1.0"
description = "Application Flask pour Site2con"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.0"
flask-sqlalchemy = "3.1.1"
werkzeug = "3.0.1"
jinja2 = "3.1.3"
markupsafe = "2.1.5"
sqlalchemy = "2.0.23"
itsdangerous = "2.1.2"
click = "8.1.7"
blinker = "1.7.0"
gunicorn = "21.2.0"
pillow = "10.2.0"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

